Esctructura basica del index sin terminar

--- a/index.html
+++ b/index.html
@@ -58,7 +58,71 @@
 			</div>
 		</div>
 	</header>
-
+	<article>
+		<div class="container-fluid">
+			<section><!--SECTION 1-->
+				<div class="row">
+					<div class="col-md-3 hidden-xs hidden-sm">	<!--ASIDE 1-->
+						<aside>
+							<img src="assets/image/aside.jpg" alt="ASIDE FIJO">
+						</aside>
+					</div>
+					<div class="col-md-10">	<!--COLUMNA 10 !IMPORTANTE!-->
+						<h1 class="text-center jumbotron">GUERRA EN LA MUNICIPALIDAD DE LIMA METROPOLITANA</h1><!--ENCABEZADO H1-->
+						<div class="row">	<!--iconos y enlaces-->
+							<div class="col-xs-6">
+								icns
+							</div>
+							<div class="col-xs-4">
+								<p>Hace 12 Minutos</p>
+							</div>
+							<div class="col-xs-6">
+								POLÍTICA
+							</div>
+						</div>
+						<div class="row">	<!--imagenes y encabezados-->
+							<div class="col-xs-8">
+								<img class="img-responsive" src="assets/image/img_grid_principal.jpg" alt="">
+							</div>
+							<div class="col-xs-8">
+								<img class="img-responsive" src="assets/image/img_grid_secundario.jpg" alt="">
+								<img class="img-responsive" src="assets/image/img_grid_especiales.jpg" alt="">
+							</div>
+						</div>
+						<div class="row">	<!--columnistas-->
+							<div class="col-md-16">
+								<div class="row">	<!--carrusel-->
+									<div class="col-md-2">
+										<img class="img-column img-gran img-responsive" src="assets/image/img_aside_author.jpg" alt="">
+									</div>
+									<div class="col-md-3">
+										<img class="img-column img-responsive" src="assets/image/img_aside_author.jpg" alt="">
+									</div>
+									<div class="col-md-3">
+										<img class="img-column img-responsive" src="assets/image/img_aside_author.jpg" alt="">
+									</div>
+									<div class="col-md-3">
+										<img class="img-column img-responsive" src="assets/image/img_aside_author.jpg" alt="">
+									</div>
+									<div class="col-md-3">
+										<img class="img-column img-responsive" src="assets/image/img_aside_author.jpg" alt="">
+									</div>
+									<div class="col-md-2">
+										<img class="img-column img-gran  img-responsive" src="assets/image/img_aside_author.jpg" alt="">
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>	<!--termina section 1-->
+					<div class="col-md-3 hidden-xs hidden-sm">	<!--ASIDE 2-->
+						<aside>
+							<img class="asid" src="assets/image/aside.jpg" alt="ASIDE FIJO">
+						</aside>
+					</div>
+				</div>
+			</section>
+		</div>
+	</article>
 	<script src="assets/js/respond.js"></script>
 	<script src="assets/js/slick.min.js"></script>
 	<script src="assets/js/jquery-1.11.3.min.js"></script>
