--- a/index.html
+++ b/index.html
@@ -62,12 +62,12 @@
 		<div class="container-fluid">
 			<section><!--SECTION 1-->
 				<div class="row">
-					<div class="col-md-3 hidden-xs hidden-sm">	<!--ASIDE 1-->
+					<div class="col-md-2 hidden-xs hidden-sm">	<!--ASIDE 1-->
 						<aside>
 							<img src="assets/image/aside.jpg" alt="ASIDE FIJO">
 						</aside>
 					</div>
-					<div class="col-md-10">	<!--COLUMNA 10 !IMPORTANTE!-->
+					<div class="col-md-12">	<!--COLUMNA 10 !IMPORTANTE!-->
 						<h1 class="text-center jumbotron">GUERRA EN LA MUNICIPALIDAD DE LIMA METROPOLITANA</h1><!--ENCABEZADO H1-->
 						<div class="row">	<!--iconos y enlaces-->
 							<div class="col-xs-6">
@@ -110,11 +110,169 @@
 									<div class="col-md-2">
 										<img class="img-column img-gran  img-responsive" src="assets/image/img_aside_author.jpg" alt="">
 									</div>
+  								</div>
+  							</div>
+  						</div>		
+  						<div class="row">	<!--articulos y banner -->
+							<div class="col-md-10"><!--articulos -->
+								<div class="row">	<!--Primer renglon dos fotos -->
+									<div class="col-md-8"><!--fotos -->
+										<div class="borde-img">
+											<h3>Mercado de Pases 2015</h3>
+											<img class="img-responsive" src="assets/image/img_especiales.jpg" alt="">
+											<p>Todo sobre Mercado de pases 2015</p>
+										</div>
+									</div>
+									<div class="col-md-8"><!--fotos -->
+										<div class="borde-img">
+											<h3>Mercado de Pases 2015</h3>
+											<img class="img-responsive" src="assets/image/img_especiales_aside.jpg" alt="">
+											<p>Todo sobre Mercado de pases 2015</p>
+										</div>
+									</div>
 								</div>
+								<div class="row">	<!--Segundo renglon dos fotos -->
+									<div class="col-md-8"><!--fotos -->
+										<div class="borde-img">
+											<h3>Mercado de Pases 2015</h3>
+											<img class="img-responsive" src="assets/image/img_especiales.jpg" alt="">
+											<p>Todo sobre Mercado de pases 2015</p>
+										</div>
+									</div>
+									<div class="col-md-8"><!--fotos -->
+										<div class="borde-img">
+											<h3>Super Bowl</h3>
+											<img class="img-responsive" src="assets/image/img_especiales_aside.jpg" alt="">
+											<p>Todo sobre Mercado de pases 2015</p>
+										</div>
+									</div>
+								</div>
+							</div>
+							<div class="col-md-6"><!--banner -->
+								<img class="img-responsive" src="assets/image/banner-aside-home.jpg" alt="">
+							</div>
+						</div>
+						<div class="row">	<!--Comienzas articulos ULTIMAS NOTICIAS -->
+							<div class="col-md-10"><!--fotos -->
+								<h3>Últimas Noticias</h3><!--articulo 1 -->
+								<p>Hace 1 Hora 12 Min</p>
+								<h4>Emma Watson protagonizará "La bella y la bestia" 1 VIDEO</h4>
+								<div class="row">
+									<div class="col-md-7">
+										<img src="assets/image/img_news.jpg" alt="">
+									</div>
+									<div class="col-md-9">
+										<p>La actriz Emma Watson fue confirmada por Disney como la <br> protagonista de "La Bella y la Bestia" en la versión de carne y <br>hueso.</p>
+										<div class="row"><!--IMG + iconos de redes sociales -->
+											<div class="col-md-3">
+												<img src="" alt="f,t,g">
+											</div>
+											<div class="col-md-1">
+												<img src="assets/image/bullet.gif" alt="">
+											</div>
+											<div class="col-md-1">
+												<img src="assets/image/ico_comment.png" alt="">
+											</div>
+											<div class="col-md-1">
+												<p>10</p>
+											</div>
+											<div class="col-md-1">
+												<img src="assets/image/bullet.gif" alt="">
+											</div>
+											<div class="col-md-4">
+												<p>ESPECTÁCULOS</p>
+											</div>
+											<div class="col-md-1">
+												<img src="assets/image/bullet.gif" alt="">
+											</div>
+											<div class="col-md-4">
+												<img src="" alt="YOUTUBE">
+											</div>
+										</div>
+									</div>
+								</div>
+								<hr><!--articulo 2 -->
+								<p>Hace 1 Hora 12 Min</p>
+								<h4>Emma Watson protagonizará "La bella y la bestia" 1 VIDEO</h4>
+								<div class="row">
+									<div class="col-md-7">
+										<img src="assets/image/img_news.jpg" alt="">
+									</div>
+									<div class="col-md-9">
+										<p>La actriz Emma Watson fue confirmada por Disney como la <br> protagonista de "La Bella y la Bestia" en la versión de carne y <br>hueso.</p>
+										<div class="row"><!--IMG + iconos de redes sociales -->
+											<div class="col-md-3">
+												<img src="" alt="f,t,g">
+											</div>
+											<div class="col-md-1">
+												<img src="assets/image/bullet.gif" alt="">
+											</div>
+											<div class="col-md-1">
+												<img src="assets/image/ico_comment.png" alt="">
+											</div>
+											<div class="col-md-1">
+												<p>10</p>
+											</div>
+											<div class="col-md-1">
+												<img src="assets/image/bullet.gif" alt="">
+											</div>
+											<div class="col-md-4">
+												<p>ESPECTÁCULOS</p>
+											</div>
+											<div class="col-md-1">
+												<img src="assets/image/bullet.gif" alt="">
+											</div>
+											<div class="col-md-4">
+												<img src="" alt="YOUTUBE">
+											</div>
+										</div>
+									</div>
+								</div>
+								<hr><!--articulo 3 -->
+								<p>Hace 1 Hora 12 Min</p>
+								<h4>Emma Watson protagonizará "La bella y la bestia" 1 VIDEO</h4>
+								<div class="row">
+									<div class="col-md-7">
+										<img src="assets/image/img_news.jpg" alt="">
+									</div>
+									<div class="col-md-9">
+										<p>La actriz Emma Watson fue confirmada por Disney como la <br> protagonista de "La Bella y la Bestia" en la versión de carne y <br>hueso.</p>
+										<div class="row"><!--IMG + iconos de redes sociales -->
+											<div class="col-md-3">
+												<img src="" alt="f,t,g">
+											</div>
+											<div class="col-md-1">
+												<img src="assets/image/bullet.gif" alt="">
+											</div>
+											<div class="col-md-1">
+												<img src="assets/image/ico_comment.png" alt="">
+											</div>
+											<div class="col-md-1">
+												<p>10</p>
+											</div>
+											<div class="col-md-1">
+												<img src="assets/image/bullet.gif" alt="">
+											</div>
+											<div class="col-md-4">
+												<p>ESPECTÁCULOS</p>
+											</div>
+											<div class="col-md-1">
+												<img src="assets/image/bullet.gif" alt="">
+											</div>
+											<div class="col-md-4">
+												<img src="" alt="YOUTUBE">
+											</div>
+										</div>
+									</div>
+								</div>
+
+							</div>
+							<div class="col-md-6"><!--fotos -->
+
 							</div>
 						</div>
 					</div>	<!--termina section 1-->
-					<div class="col-md-3 hidden-xs hidden-sm">	<!--ASIDE 2-->
+					<div class="col-md-2 hidden-xs hidden-sm">	<!--ASIDE 2-->
 						<aside>
 							<img class="asid" src="assets/image/aside.jpg" alt="ASIDE FIJO">
 						</aside>
